# AcyclicJoin

./: CMakeLists.txt  README.md  exec.sh
App/: App.cpp  CMakeLists.txt  util.h
Enclave/: CMakeLists.txt  Enclave.config.xml  Enclave.cpp  Enclave.edl  Enclave.lds  sgx_log.cpp
build_rename_check/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  acyclic_join_sgx.sln  cmake_install.cmake
build_rename_check/App/: Enclave_u_obj.vcxproj  Enclave_u_obj.vcxproj.filters  app.vcxproj  app.vcxproj.filters  cmake_install.cmake
build_rename_check/App/Enclave_u_obj.dir/Debug/Enclave_u_obj.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Enclave_u_obj.lastbuildstate
build_rename_check/Enclave/: Enclave_obj.vcxproj  Enclave_obj.vcxproj.filters  Enclave_t_obj.vcxproj  Enclave_t_obj.vcxproj.filters  cmake_install.cmake  enclave.vcxproj  enclave.vcxproj.filters  enclave_signed.vcxproj  enclave_signed.vcxproj.filters
build_rename_check/Enclave/Enclave_t_obj.dir/Debug/Enclave_t_obj.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Enclave_t_obj.lastbuildstate
build_rename_check/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build_rename_check/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
implement/: Aggtree.cpp  BitonicSort.cpp  BottomupSemiJoin.cpp  DupAggtree.cpp  JFYanDown.cpp  ORcompact.cpp  ObliViatorExpand.cpp  ObliViatorJoin.cpp  ObliYan.cpp  ParYan.cpp  ParallelBitonicSort.cpp  ParallelOExpand.cpp  ParallelSemiJoin.cpp  PrimitiveProfile.cpp  RelaxedJoin.cpp  TRA.cpp  TopDown.cpp
include/: Aggtree.h  BitonicSort.h  BottomupSemiJoin.h  DupAggtree.h  JFYanDown.h  ORcompact.h  ObliViatorExpand.h  ObliViatorJoin.h  ObliYan.h  ParYan.h  ParallelBitonicSort.h  ParallelOExpand.h  ParallelSemiJoin.h  PrimitiveProfile.h  RRSSensitivity.h  RelaxedJoin.h  TRA.h  TopDown.h  sgx_log.h  sgx_no_timing.h  sgx_profile.h
keys/: Enclave_private.pem
tpcds/: README.md  check_query18_size.py  export_query18_join_tree.py  export_query64_join_tree.py  export_query72_join_tree.py  export_query85_chain3.py  export_query85_join_tree.py  export_query85_returns_star.py  prepare_query18_scales.py  prepare_query64_scales.py  prepare_query72_scales.py  prepare_query85_chain3_scales.py  prepare_query85_returns_star_scales.py  prepare_query85_scales.py  run.py  tpcds.json
tpcds/enc_sql/: enc_q0.sql  enc_q1.sql  enc_q10.sql  enc_q100.sql  enc_q11.sql  enc_q12.sql  enc_q13.sql  enc_q14.sql  enc_q15.sql  enc_q16.sql  enc_q17.sql  enc_q18.sql  enc_q19.sql  enc_q2.sql  enc_q20.sql  enc_q21.sql  enc_q22.sql  enc_q23.sql  enc_q24.sql  enc_q25.sql  enc_q26.sql  enc_q27.sql  enc_q28.sql  enc_q29.sql  enc_q3.sql  enc_q30.sql  enc_q31.sql  enc_q32.sql  enc_q33.sql  enc_q34.sql  enc_q35.sql  enc_q36.sql  enc_q37.sql  enc_q38.sql  enc_q39.sql  enc_q4.sql  enc_q40.sql  enc_q41.sql  enc_q42.sql  enc_q43.sql  (+60 more)
tpcds/sql/: query1.sql  query12.sql  query16.sql  query20.sql  query21.sql  query23.sql  query36.sql  query37.sql  query4.sql  query40.sql  query5.sql  query70.sql  query77.sql  query80.sql  query82.sql  query86.sql  query92.sql  query94.sql  query95.sql  query98.sql
tpcds/tools/: makefile  porting.h  test.sql  tpcds.sql
tpcds/tools/data/: a.py  a.sh
tpch/: prepare_l3_join_trees.py
